frontend/src/post.css
.post {
  flex: 1;
  display: grid;
  row-gap: var(--spacing-large);
  column-gap: var(--spacing-extra-large);
  grid-template-columns: min-content 1fr;
  grid-template-rows: 1.3em 1fr auto;
}

.attachment-container {
  grid-column: 1;
  grid-row-start: 1;
  grid-row-end: 3;
  max-width: 160px;
}
.attachment-container img {
  max-height: 110px;
}

.post-header {
  grid-column-start: 2;
  grid-column-end: 3;
  grid-row-start: 1;
  grid-row-end: 1;
}

.post-body {
  grid-column-start: 2;
  grid-column-end: 3;
  grid-row: 2;
}
.post-body > p {
  margin-top: 0px;
}

.image-expanded .attachment-container {
  grid-column-start: 1;
  grid-column-end: 3;
  grid-row-start: 2;
  grid-row-end: 2;

  max-width: 56em;
}

.image-expanded .post-header {
  grid-column-start: 1;
  grid-column-end: 3;
  grid-row-start: 1;
  grid-row-end: 1;
}

.image-expanded .post-body {
  grid-column-start: 1;
  grid-column-end: 3;
  grid-row: 3;
}
.image-expanded.post .post-container {
  grid-column-start: 1;
  grid-column-end: 3;
}

.post .post-container {
  grid-column-start: 2;
  grid-column-end: 3;
  grid-row: auto;
  background-color: var(--bg-secondary);
  padding: var(--spacing-large) var(--spacing-large);
}

.post-header {
  display: flex;
  gap: var(--spacing-small);
  font-size: var(--font-size-caption);
  max-height: 1.4em;
}

.trip-name,
.post-title,
.op-title,
.post-date,
.post-number {
  font-size: var(--font-size-caption);
}
.trip-name {
  font-weight: 600;
  color: var(--text-tertiary);
}
.op-title {
  font-weight: 600;
  color: var(--text-secondary);
}

.attachment-container {
  display: flex;
  flex-direction: column;
  gap: var(--spacing-normal);
}

.attachment-container .filename {
  font-size: var(--font-size-caption);
  font-family: var(--font-mono);
  text-overflow: ellipsis;
  text-wrap: nowrap;
  overflow-x: hidden;
}

.thread-preview {
  display: flex;
  flex-wrap: wrap;
}

.thread-preview hr {
  margin-top: var(--spacing-2xl);
  width: 100%;
}

